WebKit Bugzilla
New
Browse
Search+
Log In
×
Sign in with GitHub
or
Remember my login
Create Account
·
Forgot Password
Forgotten password account recovery
RESOLVED FIXED
163724
[css-grid] Content Alignment broken with indefinite sized grid container
https://bugs.webkit.org/show_bug.cgi?id=163724
Summary
[css-grid] Content Alignment broken with indefinite sized grid container
Javier Fernandez
Reported
2016-10-20 06:20:35 PDT
Created
attachment 292172
[details]
Test case to reproduce the issue. When the grid container has indefinite width or height the Content Alignment properties (align-content and justify-content) don't work as expected. It seems that we are not computing correctly the available free space when the container has indefinite size. That issue is affecting how we deal with Overflow Alignment on the align-content and justify-content properties. In order to reproduce the issue, just load the attached test case and see how it behaves in the first grid, which is alignment using align-content: end.
Attachments
Test case to reproduce the issue.
(429 bytes, text/html)
2016-10-20 06:20 PDT
,
Javier Fernandez
no flags
Details
Patch
(16.39 KB, patch)
2016-10-20 06:34 PDT
,
Javier Fernandez
no flags
Details
Formatted Diff
Diff
Archive of layout-test-results from ews103 for mac-yosemite
(1017.26 KB, application/zip)
2016-10-20 07:31 PDT
,
Build Bot
no flags
Details
Archive of layout-test-results from ews105 for mac-yosemite-wk2
(894.17 KB, application/zip)
2016-10-20 07:35 PDT
,
Build Bot
no flags
Details
Archive of layout-test-results from ews123 for ios-simulator-wk2
(9.37 MB, application/zip)
2016-10-20 07:47 PDT
,
Build Bot
no flags
Details
Archive of layout-test-results from ews114 for mac-yosemite
(1.68 MB, application/zip)
2016-10-20 07:48 PDT
,
Build Bot
no flags
Details
Patch
(16.45 KB, patch)
2016-10-20 08:16 PDT
,
Javier Fernandez
no flags
Details
Formatted Diff
Diff
Archive of layout-test-results from ews116 for mac-yosemite
(1.84 MB, application/zip)
2016-10-20 09:12 PDT
,
Build Bot
no flags
Details
Archive of layout-test-results from ews101 for mac-yosemite
(1.39 MB, application/zip)
2016-10-20 09:15 PDT
,
Build Bot
no flags
Details
Archive of layout-test-results from ews123 for ios-simulator-wk2
(17.37 MB, application/zip)
2016-10-20 09:32 PDT
,
Build Bot
no flags
Details
Archive of layout-test-results from ews105 for mac-yosemite-wk2
(902.70 KB, application/zip)
2016-10-20 09:35 PDT
,
Build Bot
no flags
Details
Patch
(19.07 KB, patch)
2016-10-20 10:39 PDT
,
Javier Fernandez
no flags
Details
Formatted Diff
Diff
Show Obsolete
(2)
View All
Add attachment
proposed patch, testcase, etc.
Javier Fernandez
Comment 1
2016-10-20 06:34:21 PDT
Created
attachment 292173
[details]
Patch
Manuel Rego Casasnovas
Comment 2
2016-10-20 07:09:59 PDT
Comment on
attachment 292173
[details]
Patch View in context:
https://bugs.webkit.org/attachment.cgi?id=292173&action=review
r=me
> Source/WebCore/ChangeLog:8 > + The Grid Tracks sizing algorithm updates receives the available space
Typo "updates receives".
> Source/WebCore/ChangeLog:19 > + (WebCore::RenderGrid::layoutBlock): Compute freeSpace for Rows after doing layout and resolving the indefinite height.
Nit: You wrapped the lines in the rest of the ChangeLog comment but not here.
Build Bot
Comment 3
2016-10-20 07:31:08 PDT
Comment on
attachment 292173
[details]
Patch
Attachment 292173
[details]
did not pass mac-ews (mac): Output:
http://webkit-queues.webkit.org/results/2330882
New failing tests: fast/css-grid-layout/grid-content-alignment-overflow.html
Build Bot
Comment 4
2016-10-20 07:31:12 PDT
Created
attachment 292179
[details]
Archive of layout-test-results from ews103 for mac-yosemite The attached test failures were seen while running run-webkit-tests on the mac-ews. Bot: ews103 Port: mac-yosemite Platform: Mac OS X 10.10.5
Build Bot
Comment 5
2016-10-20 07:35:37 PDT
Comment on
attachment 292173
[details]
Patch
Attachment 292173
[details]
did not pass mac-wk2-ews (mac-wk2): Output:
http://webkit-queues.webkit.org/results/2330893
New failing tests: fast/css-grid-layout/grid-content-alignment-overflow.html
Build Bot
Comment 6
2016-10-20 07:35:41 PDT
Created
attachment 292181
[details]
Archive of layout-test-results from ews105 for mac-yosemite-wk2 The attached test failures were seen while running run-webkit-tests on the mac-wk2-ews. Bot: ews105 Port: mac-yosemite-wk2 Platform: Mac OS X 10.10.5
Build Bot
Comment 7
2016-10-20 07:46:58 PDT
Comment on
attachment 292173
[details]
Patch
Attachment 292173
[details]
did not pass ios-sim-ews (ios-simulator-wk2): Output:
http://webkit-queues.webkit.org/results/2330918
New failing tests: fast/css-grid-layout/grid-content-alignment-overflow.html
Build Bot
Comment 8
2016-10-20 07:47:01 PDT
Created
attachment 292186
[details]
Archive of layout-test-results from ews123 for ios-simulator-wk2 The attached test failures were seen while running run-webkit-tests on the ios-sim-ews. Bot: ews123 Port: ios-simulator-wk2 Platform: Mac OS X 10.11.6
Build Bot
Comment 9
2016-10-20 07:48:16 PDT
Comment on
attachment 292173
[details]
Patch
Attachment 292173
[details]
did not pass mac-debug-ews (mac): Output:
http://webkit-queues.webkit.org/results/2330944
New failing tests: fast/css-grid-layout/grid-content-alignment-overflow.html
Build Bot
Comment 10
2016-10-20 07:48:19 PDT
Created
attachment 292187
[details]
Archive of layout-test-results from ews114 for mac-yosemite The attached test failures were seen while running run-webkit-tests on the mac-debug-ews. Bot: ews114 Port: mac-yosemite Platform: Mac OS X 10.10.5
Javier Fernandez
Comment 11
2016-10-20 08:16:58 PDT
Created
attachment 292193
[details]
Patch
Build Bot
Comment 12
2016-10-20 09:12:25 PDT
Comment on
attachment 292193
[details]
Patch
Attachment 292193
[details]
did not pass mac-debug-ews (mac): Output:
http://webkit-queues.webkit.org/results/2331607
New failing tests: fast/css-grid-layout/grid-content-alignment-overflow.html
Build Bot
Comment 13
2016-10-20 09:12:29 PDT
Created
attachment 292204
[details]
Archive of layout-test-results from ews116 for mac-yosemite The attached test failures were seen while running run-webkit-tests on the mac-debug-ews. Bot: ews116 Port: mac-yosemite Platform: Mac OS X 10.10.5
Build Bot
Comment 14
2016-10-20 09:15:05 PDT
Comment on
attachment 292193
[details]
Patch
Attachment 292193
[details]
did not pass mac-ews (mac): Output:
http://webkit-queues.webkit.org/results/2331682
New failing tests: fast/css-grid-layout/grid-content-alignment-overflow.html
Build Bot
Comment 15
2016-10-20 09:15:09 PDT
Created
attachment 292205
[details]
Archive of layout-test-results from ews101 for mac-yosemite The attached test failures were seen while running run-webkit-tests on the mac-ews. Bot: ews101 Port: mac-yosemite Platform: Mac OS X 10.10.5
Build Bot
Comment 16
2016-10-20 09:32:09 PDT
Comment on
attachment 292193
[details]
Patch
Attachment 292193
[details]
did not pass ios-sim-ews (ios-simulator-wk2): Output:
http://webkit-queues.webkit.org/results/2331731
New failing tests: fast/css-grid-layout/grid-content-alignment-overflow.html
Build Bot
Comment 17
2016-10-20 09:32:14 PDT
Created
attachment 292209
[details]
Archive of layout-test-results from ews123 for ios-simulator-wk2 The attached test failures were seen while running run-webkit-tests on the ios-sim-ews. Bot: ews123 Port: ios-simulator-wk2 Platform: Mac OS X 10.11.6
Build Bot
Comment 18
2016-10-20 09:35:27 PDT
Comment on
attachment 292193
[details]
Patch
Attachment 292193
[details]
did not pass mac-wk2-ews (mac-wk2): Output:
http://webkit-queues.webkit.org/results/2331793
New failing tests: fast/css-grid-layout/grid-content-alignment-overflow.html
Build Bot
Comment 19
2016-10-20 09:35:32 PDT
Created
attachment 292210
[details]
Archive of layout-test-results from ews105 for mac-yosemite-wk2 The attached test failures were seen while running run-webkit-tests on the mac-wk2-ews. Bot: ews105 Port: mac-yosemite-wk2 Platform: Mac OS X 10.10.5
Javier Fernandez
Comment 20
2016-10-20 10:39:13 PDT
Created
attachment 292224
[details]
Patch Fixed layout tests.
WebKit Commit Bot
Comment 21
2016-10-21 01:13:59 PDT
Comment on
attachment 292224
[details]
Patch Clearing flags on attachment: 292224 Committed
r207663
: <
http://trac.webkit.org/changeset/207663
>
WebKit Commit Bot
Comment 22
2016-10-21 01:14:05 PDT
All reviewed patches have been landed. Closing bug.
Note
You need to
log in
before you can comment on or make changes to this bug.
Top of Page
Format For Printing
XML
Clone This Bug